修改跨域 添加点餐前端（合计金额） 花生壳已跑通

--- a/TestiView/src/views/main.scss
+++ b/TestiView/src/views/main.scss
@@ -1,5 +1,5 @@
-/*出处 https://www.w3cplus.com/css/pure-css-create-masonry-layout.html*/
-/*编译命令：E:\Test\TestiView\src\views>sass main.scss:main.css*/
+// /*出处 https://www.w3cplus.com/css/pure-css-create-masonry-layout.html*/
+// /*编译命令：E:\Test\TestiView\src\views>sass main.scss:main.css*/
 $bg: rgb(255, 255, 255);
 $itemBg1: #f5eff1;
 $itemBg2: rgb(247, 243, 244);
